# oneAdePT

./: CMakeLists.txt  CudaManager-cuda-nvptx64-nvidia-cuda-sm_50.bc  Linking_example9.1.txt  NavStateIndex-cuda-nvptx64-nvidia-cuda-sm_50.bc  README.md  configure.sh  configure_aug.sh  cufisher_price_v2.dp.cpp  oneAtomic.h  run1.sh  run11.sh  run11.sh.e834169  run11.sh.o834176  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh  run7.sh  run8.sh  run9.sh  test1.cpp  test10.cpp  test11.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  vtune_collect.sh
base/inc/: mkl.fi  mkl_blas.fi  mkl_blas.h  mkl_blas_omp_offload.f90  mkl_blas_omp_offload_ilp64.f90  mkl_blas_omp_offload_lp64.f90  mkl_blas_omp_variant.f90  mkl_blas_omp_variant_ilp64.f90  mkl_blas_omp_variant_lp64.f90  mkl_df.f90  mkl_dfti_omp_offload.f90  mkl_lapack_omp_offload.f90  mkl_lapack_omp_variant.f90  mkl_omp_offload.f90  mkl_pardiso.f90  mkl_pardiso.fi  mkl_pardiso.h  mkl_service.f90  mkl_service.fi  mkl_vml.f90  mkl_vml_functions.h  mkl_vml_omp_offload.f90  mkl_vml_omp_variant.f90  mkl_vsl.f90  mkl_vsl_functions.h  mkl_vsl_omp_offload.f90  mkl_vsl_omp_variant.f90
base/inc/AdePT/: LoopNavigator.h
base/inc/AdePT/1/: Atomic.h  BlockData.h  LoopNavigator.h  MParray.h  SparseVector.h  VolumeDispatcher.h  mpmc_bounded_queue.h  test_header.h
base/inc/CopCore/: VariableSizeObj.h
base/inc/CopCore/1/: Allocator.h  CopCore.h  Global.h  Launcher.h  Macros.h  PhysicalConstants.h  Ranluxpp.h  SystemOfUnits.h  VariableSizeObj.h  VariableSizeObjAllocator.h  launch_grid.h  mulmod.h
base/inc/Field/: ConstBzFieldStepper.h  ConstFieldHelixStepper.h  fieldPropagatorConstBz.h
base/inc/Field/1/: ConstBzFieldStepper.h  ConstFieldHelixStepper.h  fieldPropagatorConstBany.h  fieldPropagatorConstBz.h
base/inc/G4HepEm/: G4HepEmRandomEngineBase.hh
base/inc/VecGeom/management/: CudaManager.h
base/inc/VecGeom/navigation/: NavStateIndex.h
base/inc/VecGeom/volumes/: PlacedVolume.h
base/inc/oneapi/: mkl.hpp
base/inc/oneapi/mkl/: bfloat16.hpp  blas.hpp  dfti.hpp  exceptions.hpp  export.hpp  lapack.hpp  rng.hpp  spblas.hpp  stats.hpp  types.hpp  vm.hpp
base/inc/oneapi/mkl/blas/: buffer.hpp  buffer_decls.hpp  usm.hpp  usm_decls.hpp
base/inc/oneapi/mkl/rng/: device.hpp  distributions.hpp  engines.hpp  functions.hpp
base/inc/oneapi/mkl/rng/detail/: engine_base.hpp
base/inc/oneapi/mkl/rng/device/: distributions.hpp  engines.hpp  functions.hpp  types.hpp
base/inc/oneapi/mkl/rng/device/detail/: bits_impl.hpp  distribution_base.hpp  engine_base.hpp  gaussian_impl.hpp  lognormal_impl.hpp  mrg32k3a_impl.hpp  mrg32k3a_skip_ahead_matrix.hpp  philox4x32x10_impl.hpp  types.hpp  uniform_impl.hpp
examples/: CMakeLists.txt
examples/Example9/: CMakeLists.txt  electrons.cu  example9.cu  gammas.cu
examples/Example9.1/: CMakeLists.txt  Cuda.h  combined.dp.cpp  electrons.cu  electrons.dp.cpp  example9.cpp  example9.cu  example9.cuh  example9.dp.cpp  example9.dp.hpp  example9.h  gammas.cu  gammas.dp.cpp
examples/Test12/: CMakeLists.txt  test12.cpp
extra/: basic.cpp  extra.cmake  hello_world.cpp  rnd.cpp  rnd2.cpp
migrated/: run_simulation.hpp  sim_kernels.h  sim_kernels.h.yaml  test_atomic.dp.cpp  test_queue.dp.cpp  test_ranluxpp.dp.cpp  test_sparsevector.dp.cpp  test_track_block.dp.cpp
tests/: CMakeLists.txt  field.cu  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cu  test4.cpp  test6.cpp  test8.cpp  test9.cpp  vtune_collect.sh
